# LOB

./: .gitignore  CMakeLists.txt  DESIGN.md  Dockerfile  Dockerfile.cpp  FXCM_SETUP.md  README.md  app.py  app_exchange.py  app_original.py  central_exchange  cloud-init.sh  docker-compose.yml  engine.py  exchange.py  fxcm.py  fxcm_bridge.py  index_service.py  position_manager_backup.txt  proxy.py  railway.toml  requirements.txt
1919642146/: catalog.sqlite
_backup_root/: railway.toml
central_exchange/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  start_server.ps1
central_exchange/cmake/: WasmBuild.cmake
central_exchange/data/: bank_rates.json
central_exchange/docs/: BUILD.md
central_exchange/k8s/: pvc.yaml
central_exchange/scripts/: fetch_bank_rates.py
central_exchange/src/: accounting_engine.h  auth.h  auth_middleware.h  bank_feed.h  bom_feed.h  client_main.cpp  database.h  event_journal.h  fxcm_feed.h  fxcm_history.h  http_server.h  input_validator.h  interfaces.h  main.cpp  matching_engine.h  order_book.h  position_manager.h  product_catalog.h  qpay_handler.h  security_config.h  usdmnt_market.h
central_exchange/src/routes/: admin_routes.h  auth_routes.h  market_data_routes.h  payment_routes.h  route_base.h  routes.h  streaming_helpers.h  trading_routes.h
central_exchange/src/ui/: imgui_renderer.h
central_exchange/src/web/: admin.html  app.js  datagrid.css  datagrid.js  index.html  index.html.raw  style.css  wasm-loader.js  webgl-chart.js
central_exchange/src/web/modules/: app-init.js  history.js  i18n.js  layout.js  modal.js  positions.js  state.js  theme.js  trade.js  utils.js
central_exchange/test/: integration_test.cpp
cmake/: WasmBuild.cmake
data/ledger/: closing.ledger  margin.ledger  pnl.ledger  withdrawals.ledger
docs/: API.md  BRANDBOOK.md  BUILD.md  BUSINESS_PLAN.md  CRE_DESIGN_PHILOSOPHY.md  CRE_DESIGN_SPEC_v2.md  MARKET_MAKER_PROGRAM.md  RISK_MANAGEMENT_FRAMEWORK.md  SECURITY-AUDIT.md  UI-DESIGN.md  benchmark_results.md  fxcm_integration.md
forex_service/: CMakeLists.txt  README.md
forex_service/src/: SessionStatusListener.h  fxcm_session.cpp  fxcm_session.h  http_server.cpp  http_server.h  logger.h  main.cpp  product_catalog.cpp  product_catalog.h
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: index.ts  types.ts
frontend/src/components/: AccountSummary.css  AccountSummary.tsx  ConfirmModal.css  ConfirmModal.tsx  Dashboard.css  Dashboard.tsx  LanguageSwitcher.css  LanguageSwitcher.tsx  MarketWatch.css  MarketWatch.tsx  OrderBook.css  OrderBook.tsx  PhoneLogin.css  PhoneLogin.tsx  Positions.css  Positions.tsx  PriceChart.css  PriceChart.tsx  TradingPanel.css  TradingPanel.tsx  index.ts
frontend/src/i18n/: index.ts
include/: types.h
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
ledger/: accounts.ledger  eod_settlement.sh  financial_statements.sh  master.journal  monthly_close.sh  prices.ledger  tax_report.sh
ledger/templates/: funding.journal  liquidation.journal
scripts/: audit_trail.py  build_cre.sh  cre-ledger.py  cre-start.sh  cre-status.sh  cre-stop.sh  fetch_bank_rates.py  reconcile.py  start_cre.sh
src/: accounting_engine.h  auth.h  auth_middleware.h  bank_feed.h  bom_feed.h  circuit_breaker.h  client_main.cpp  database.h  disruptor.h  event_journal.h  exchange_config.h  exchange_factory.h  fix_protocol.h  fxcm_feed.h  fxcm_history.h  hedge_router.h  http_server.h  interfaces.h  kyc_service.h  ledger_writer.h  main.cpp  matching_engine.cpp  matching_engine.h  memory_pool.h  order_book.h  orderbook.cpp  orderbook.h  payment_gateway.h  position_manager.h  product_catalog.h  qpay_handler.h  rate_limiter.h  rate_provider.h  risk_engine.cpp  risk_engine.h  safe_ledger.h  security_config.h  spsc_queue.h  usdmnt_market.h  wasm_exports.cpp
src/routes/: admin_routes.h  auth_routes.h  auth_routes.h.bak  market_data_routes.h  payment_routes.h  route_base.h  routes.h  streaming_helpers.h  trading_routes.h
src/ui/: imgui_renderer.h
src/web/: DESIGN.md  MODULAR_SPLIT_SUMMARY.md  admin.html  app-clean.js  app-v2.js  app-v3.js  app-v4.js  app.js  bank_rates.json  cre-chart.js  cre-v2.css  cre-v3.css  datagrid.js  i18n.js  index-clean.html  index-old-20260203.html  index-old-mess.html  index-v2.html  index-v3.html  index.html  manifest.json  module-test.html  run-test.js  style-clean.css  style-v2.css  style.css  test-browser.js  test-modules.js  wasm-loader.js  webgl-chart.js
src/web/archive/: app-clean.js  app-original-backup.js  app-v3-current.js  cre-v3.css  index-old-20260203.html  style-clean.css
src/web/archive/modules/: alerts.js  api.js  app-init.js  chart.js  connection.js  errorhandler.js  i18n.js  keyboard.js  layout.js  marketplace.js  modal.js  sse.js  state.js  theme.js  toast.js  trade.js  utils.js
src/web/modules/: alerts.js  api.js  app-init.js  auth.js  book.js  bootstrap.js  chart.js  connection.js  error-handler.js  errorhandler.js  fx-panel.js  history.js  i18n.js  keyboard.js  layout.js  market.js  marketplace.js  modal.js  orderbook.js  orders.js  positions.js  sound.js  sse.js  state.js  theme.js  toast.js  trade.js  utils.js  watchlist.js
test/: integration_test.cpp  stress_test.cpp
tests/: CMakeLists.txt  test_order_book.cpp
